Revision history for {{$dist->name}}

{{$NEXT}}

0.012     2012-12-01 22:57:01 PST-0800 (Karen Etheridge)
          - examples/ directory added, containing fleshed-out code snippets
            used in the article for the 2012 Perl Advent Calendar, and a
            detailed example of some unit tests for a client library

0.011     2012-10-16 11:37:48 PDT-0700 (Karen Etheridge)
          - remove additional options in constructor before passing to
            LWP::UserAgent (was causing a carp when $^W was set) - thanks for
            the report and patch, Nigel Gregoire and Michael Schulthess!
          - all remaining uses of eval eliminated, by using better heuristics
            for "can be used as a coderef" logic

0.010     2012-10-06 16:47:33 PDT-0700 (Karen Etheridge)
          - documentation on integration with XML::Compile::SOAP
          - questionable uses of eval { $foo->isa } converted to Safe::Isa
          - imported symbols are no longer available as methods

0.009     2012-08-29 09:54:34 PDT-0700 (Karen Etheridge)
          - fix test to work with older (pre-6.00) LWP::UserAgent, when
            _new_response did not take a content argument

0.008     2012-08-21 12:48:35 PDT-0700 (Karen Etheridge)
          - better handling when the response implementation dies, either
            with an error message or an HTTP::Response object
          - network_fallback and map_network_response features added, for
            sending any or all requests through to the real LWP::UserAgent
          - new feature: "last_useragent", for getting the last useragent
            object used globally
          - allow exact string matching against domains to work even for
            domains specified via a string-overloaded object
          - bug fix: properly mask existing mappings in
            $ua->map_response(..., undef) (v0.007)

0.007     2012-08-14 13:56:50 PDT-0700 (Karen Etheridge)